adding kluge to select only first few (smallest) libs from each project as an actual option

--- a/globusgalaxy/notebooks/multiproject_submission.ipynb
+++ b/globusgalaxy/notebooks/multiproject_submission.ipynb
@@ -406,7 +406,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "unaligned_dir = os.path.join(flowcell_dir, 'Unaligned', 'P43-12-23224208')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "unaligned_libs = [os.path.join(unaligned_dir, entry)\n",
+    "                      for entry in os.listdir(unaligned_dir)\n",
+    "                      if os.path.isdir(os.path.join(unaligned_dir, entry))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -414,55 +438,150 @@
     {
      "data": {
       "text/plain": [
-       "['#Data Export for Workflow Batch Submission Through the APII\\n',\n",
-       " '\\n',\n",
-       " '\\n',\n",
-       " '### INSTRUCTIONS\\n',\n",
-       " '#######################################\\n',\n",
-       " '#The following data can be used to input the parameters you have previously determined to be\\n',\n",
-       " '#set at runtime. Please specify the library or history where the input data can be found.\\n',\n",
-       " '#Once you have filled out the table you can run the API script to submit the jobs through Galaxy\\n',\n",
-       " '#via the API.\\n',\n",
-       " '\\n',\n",
-       " '#NOTE: If you make any changes to the workflow or edit the name of the workflow, you will need\\n',\n",
-       " '#to recreate the table before submitting the job via the API since some metadata parameters will\\n',\n",
-       " '#be modified.\\n',\n",
-       " '\\n',\n",
-       " '#NOTE: It is up to the user to make sure the input files are in the correct format for each\\n',\n",
-       " '#parameter being filled out.\\n',\n",
-       " '\\n',\n",
-       " '#NOTE: You will need to specify three items for input files to an application.\\n',\n",
-       " '#The format for an input file should be [SourceType::SourceName::file_name]:\\n',\n",
-       " '#1. Source Type - which can be library or history\\n',\n",
-       " '#2. Source Name - the name of the library or history.\\n',\n",
-       " '#3. Filename - specify the name of the file as it exists in the library or history.\\n',\n",
-       " '\\n',\n",
-       " '\\n',\n",
-       " '########################################\\n',\n",
-       " '\\n',\n",
-       " '\\n',\n",
-       " '### METADATA\\n',\n",
-       " '#######################################\\n',\n",
-       " 'Workflow Name\\tnextera_sr_grch38_v0.1_complete_plus_trinity\\n',\n",
-       " 'Workflow id\\t10a156f2bf8d60c6\\n',\n",
-       " 'Project Name\\t160203_P43-12_P43-13_C6VG0ANXX\\n',\n",
-       " '#######################################\\n',\n",
-       " '\\n',\n",
-       " '\\n',\n",
-       " '###TABLE DATA\\n',\n",
-       " '#######################################\\n',\n",
-       " 'SampleName\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_endpoint\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_path4\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_path5\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_path6\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_path7\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_path1\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_path2\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_path3\\tfastq_in##Param::2373::globus_get_data_flowcell_text::from_path8\\tannotation_adapters##SourceType::SourceName::adapterFile\\tannotation_refflat##SourceType::SourceName::refflatFile\\tannotation_ribosomal_intervals##SourceType::SourceName::ribointsFile\\tannotation_gtf##SourceType::SourceName::gtfFile\\tfastq_out##Param::2375::globus_send_data::to_endpoint\\tfastq_out##Param::2375::globus_send_data::to_path\\ttrimmed_fastq_out##Param::2382::globus_send_data::to_endpoint\\ttrimmed_fastq_out##Param::2382::globus_send_data::to_path\\tfastqc_qc_html_out##Param::2383::globus_send_data::to_endpoint\\tfastqc_qc_html_out##Param::2383::globus_send_data::to_path\\tfastqc_qc_txt_out##Param::2386::globus_send_data::to_endpoint\\tfastqc_qc_txt_out##Param::2386::globus_send_data::to_path\\ttophat_alignments_bam_out##Param::2388::globus_send_data::to_endpoint\\ttophat_alignments_bam_out##Param::2388::globus_send_data::to_path\\ttrinity_fasta_out##Param::2387::globus_send_data::to_endpoint\\ttrinity_fasta_out##Param::2387::globus_send_data::to_path\\tpicard_markdups_metrics_html_out##Param::2368::globus_send_data::to_endpoint\\tpicard_markdups_metrics_html_out##Param::2368::globus_send_data::to_path\\tpicard_align_metrics_html_out##Param::2366::globus_send_data::to_endpoint\\tpicard_align_metrics_html_out##Param::2366::globus_send_data::to_path\\tpicard_rnaseq_metrics_text_out##Param::2371::globus_send_data::to_endpoint\\tpicard_rnaseq_metrics_text_out##Param::2371::globus_send_data::to_path\\ttophat_stats_metrics_txt_out##Param::2372::globus_send_data::to_endpoint\\ttophat_stats_metrics_txt_out##Param::2372::globus_send_data::to_path\\thtseq_counts_txt_out##Param::2389::globus_send_data::to_endpoint\\thtseq_counts_txt_out##Param::2389::globus_send_data::to_path\\thtseq_metrics_txt_out##Param::2391::globus_send_data::to_endpoint\\thtseq_metrics_txt_out##Param::2391::globus_send_data::to_path\\t',\n",
-       " 'lib6830_C6VG0ANXX\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020/empty_L004.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020/empty_L005.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020/CD154-peanut-xtr-300_S80_L006_R1_001.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020/empty_L007.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020/empty_L001.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020/empty_L002.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020/empty_L003.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020/empty_L008.fastq.gz\\tlibrary::annotation::smarter_adapter_seqs_3p_5p.fasta\\tlibrary::annotation::Homo_sapiens.GRCh38.77.refflat.txt\\tlibrary::annotation::Homo_sapiens.GRCh38.77.ribosomalIntervalsWheaderV2.txt\\tlibrary::annotation::Homo_sapiens.GRCh38.77.gtf\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/inputFastqs/lib6830_C6VG0ANXX_R1-final.fastq.gz\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/trimmed/lib6830_C6VG0ANXX_trimmed.fastq\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/QC/lib6830_C6VG0ANXX_fastqc_qc.html\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/QC/lib6830_C6VG0ANXX_fastqc_qc.txt\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/alignments/lib6830_C6VG0ANXX_tophat_alignments.bam\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/Trinity/lib6830_C6VG0ANXX_trinity.fasta\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/metrics/lib6830_C6VG0ANXX_picard_markdups_metrics.html\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/metrics/lib6830_C6VG0ANXX_picard_align_metrics.html\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/metrics/lib6830_C6VG0ANXX_picard_rnaseq_metrics.text\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/metrics/lib6830_C6VG0ANXX_tophat_stats_metrics.txt\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/counts/lib6830_C6VG0ANXX_htseq_counts.txt\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160203/metrics/lib6830_C6VG0ANXX_htseq_metrics.txt\\n',\n",
-       " 'lib6822_C6VG0ANXX\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-13-23232210/lib6822-25940935/empty_L004.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-13-23232210/lib6822-25940935/empty_L005.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-13-23232210/lib6822-25940935/1-HC29-CD154-Peanut-C10_S72_L006_R1_001.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-13-23232210/lib6822-25940935/empty_L007.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-13-23232210/lib6822-25940935/empty_L001.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-13-23232210/lib6822-25940935/empty_L002.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-13-23232210/lib6822-25940935/empty_L003.fastq.gz\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-13-23232210/lib6822-25940935/empty_L008.fastq.gz\\tlibrary::annotation::smarter_adapter_seqs_3p_5p.fasta\\tlibrary::annotation::Homo_sapiens.GRCh38.77.refflat.txt\\tlibrary::annotation::Homo_sapiens.GRCh38.77.ribosomalIntervalsWheaderV2.txt\\tlibrary::annotation::Homo_sapiens.GRCh38.77.gtf\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/inputFastqs/lib6822_C6VG0ANXX_R1-final.fastq.gz\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/trimmed/lib6822_C6VG0ANXX_trimmed.fastq\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/QC/lib6822_C6VG0ANXX_fastqc_qc.html\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/QC/lib6822_C6VG0ANXX_fastqc_qc.txt\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/alignments/lib6822_C6VG0ANXX_tophat_alignments.bam\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/Trinity/lib6822_C6VG0ANXX_trinity.fasta\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/metrics/lib6822_C6VG0ANXX_picard_markdups_metrics.html\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/metrics/lib6822_C6VG0ANXX_picard_align_metrics.html\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/metrics/lib6822_C6VG0ANXX_picard_rnaseq_metrics.text\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/metrics/lib6822_C6VG0ANXX_tophat_stats_metrics.txt\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/counts/lib6822_C6VG0ANXX_htseq_counts.txt\\tjeddy#srvgridftp01\\t/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-13Processed_160203/metrics/lib6822_C6VG0ANXX_htseq_metrics.txt\\n']"
+       "0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "workflow_lines"
+    "sum(os.path.getsize(f) for f in os.listdir(unaligned_libs[0]) if os.path.isfile(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16971474420]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[sum(os.path.getsize(os.path.join(p, f)) \n",
+    " for p in unaligned_libs\n",
+    " for f in os.listdir(p))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6831-25921999',\n",
+       "  144860713),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6837-25924003',\n",
+       "  113622483),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6838-25918014',\n",
+       "  95481507),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6825-25939928',\n",
+       "  129205372),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6834-25924002',\n",
+       "  97674312),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6841-25922000',\n",
+       "  105138033),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6829-25942932',\n",
+       "  166809249),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6923-25938933',\n",
+       "  101060774),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6922-25939930',\n",
+       "  99729366),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6840-25940936',\n",
+       "  103314866),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6826-25920019',\n",
+       "  125376921),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6828-25926002',\n",
+       "  129041427),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6842-25934984',\n",
+       "  104524914),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6835-25926003',\n",
+       "  112046298),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6832-25918013',\n",
+       "  149190274),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6924-25918015',\n",
+       "  131338314),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020',\n",
+       "  6538349),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6827-25921998',\n",
+       "  123280564),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6836-25935978',\n",
+       "  108853437),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6925-25934985',\n",
+       "  155820972),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6839-25942933',\n",
+       "  6045231),\n",
+       " ('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6833-25939929',\n",
+       "  159674882)]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map(lambda x: (x, sum(os.path.getsize(os.path.join(x, f))\n",
+    "                             for f in os.listdir(x))), unaligned_libs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6839-25942933',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6830-25920020',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6838-25918014',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6834-25924002',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6922-25939930',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6923-25938933',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6840-25940936',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6842-25934984',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6841-25922000',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6836-25935978',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6835-25926003',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6837-25924003',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6827-25921998',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6826-25920019',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6828-25926002',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6825-25939928',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6924-25918015',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6831-25921999',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6832-25918013',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6925-25934985',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6833-25939929',\n",
+       " '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Unaligned/P43-12-23224208/lib6829-25942932']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(unaligned_libs, key=lambda x: sum(os.path.getsize(os.path.join(x, f))\n",
+    "                                         for f in os.listdir(x)))"
    ]
   },
   {
