--- a/bripipetools/genlims/nb/flowcell_info_insertion.ipynb
+++ b/bripipetools/genlims/nb/flowcell_info_insertion.ipynb
@@ -29,24 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# wrapper function for regex matching\n",
-    "def match_or_empty(string, pattern):\n",
-    "    regex = re.compile(pattern)\n",
-    "    match = regex.search(string)\n",
-    "    if match is not None:\n",
-    "        return match.group()\n",
-    "    else:\n",
-    "        return ''\n",
-    "    \n",
+    "\n",
     "# wrapper function for regex matching\n",
     "def matchdefault(pattern, string, default=''):\n",
-    "    match = re.search(pattern, string)\n",
+    "    \n",
+    "    regex = re.compile(pattern)\n",
+    "    match = regex.search(string)\n",
     "    if match is not None:\n",
     "        return match.group()\n",
     "    else:\n",
@@ -55,28 +49,28 @@
     "### file/path/string parsing functions ###\n",
     "\n",
     "def get_lib_id(lib_str):\n",
-    "    lib_id = match_or_empty(lib_str, 'lib[1-9]+[0-9]*')\n",
+    "    lib_id = matchdefault('lib[1-9]+[0-9]*', lib_str)\n",
     "    \n",
     "    return lib_id\n",
     "\n",
-    "def parse_fc_str(fc_str):\n",
-    "    fc_parts = fc_str.split('_')\n",
+    "def parse_fc_run_id(fc_run_id):\n",
+    "    fc_parts = fc_run_id.split('_')\n",
     "\n",
     "    d = datetime.datetime.strptime(fc_parts[0], '%y%m%d')\n",
     "    \n",
     "    date = datetime.date.isoformat(d)\n",
     "    instrument_id = fc_parts[1]\n",
-    "    run_id = int(fc_parts[2])\n",
+    "    run_num = int(fc_parts[2])\n",
     "    \n",
-    "    fc_id = match_or_empty(fc_str, '(?<=(_(A|B|D)))([A-Z]|[0-9])*XX')\n",
+    "    fc_id = matchdefault('(?<=(_(A|B|D)))([A-Z]|[0-9])*XX', fc_run_id)\n",
+    "    fc_pos = matchdefault('.{1}(?=%s)' % fc_id, fc_run_id)\n",
     "\n",
-    "    return date, instrument_id, run_id, fc_id\n",
-    "    \n",
+    "    return date, instrument_id, run_num, fc_id, fc_pos\n",
     "    \n",
     "def get_proj_id(proj_str):\n",
-    "    proj = match_or_empty(proj_str, 'P+[0-9]+(-[0-9]+){,1}')\n",
-    "    proj_id = int(match_or_empty(proj, '(?<=P)[0-9]+'))\n",
-    "    subproj_id = int(match_or_empty(proj, '(?<=-)[0-9]+'))\n",
+    "    proj = matchdefault('P+[0-9]+(-[0-9]+){,1}', proj_str)\n",
+    "    proj_id = int(matchdefault('(?<=P)[0-9]+', proj))\n",
+    "    subproj_id = int(matchdefault('(?<=-)[0-9]+', proj))\n",
     "    \n",
     "    return proj_id, subproj_id\n",
     "\n",
@@ -92,14 +86,18 @@
     "                  'subproject_id': subproject_id,\n",
     "                  'fastq_dir': fastq_dir}\n",
     "    \n",
-    "    flowcell_str = l_parts[2]\n",
-    "    fc_date, instr, run_num, flowcell_id = parse_fc_str(flowcell_str)\n",
+    "    flowcell_run_id = l_parts[2]\n",
+    "    fc_dir = l_parts[4]\n",
+    "    fc_date, instr, run_num, fc_id, fc_pos = parse_fc_run_id(flowcell_run_id)\n",
     "    \n",
     "    flowcell_packet = {'date': fc_date,\n",
     "                       'instrument': instr,\n",
-    "                       'run_number': run_num}\n",
+    "                       'run_number': run_num,\n",
+    "                       'flowcell_id': fc_id,\n",
+    "                       'flowcell_pos': fc_pos,\n",
+    "                       'flowcell_dir': fc_dir}\n",
     "    \n",
-    "    return lib_id, lib_packet, flowcell_id, flowcell_packet\n",
+    "    return lib_id, lib_packet, flowcell_run_id, flowcell_packet\n",
     "\n",
     "### file parsing/annotating functions ###\n",
     "\n",
@@ -113,17 +111,19 @@
     "def get_fastq_source(file_path):\n",
     "    lane_id = matchdefault('(?<=_)L00[1-8]', file_path)\n",
     "    read_id = matchdefault('(?<=_)R[1-2]', file_path)\n",
-    "    return lane_id, read_id\n",
+    "    sample_num = int(matchdefault('(?<=_S)[0-9]+', file_path))\n",
+    "    return lane_id, read_id, sample_num\n",
     "    \n",
     "def collect_fastq_info(file_path):\n",
     "    file_type,compression = get_file_type(file_path)\n",
     "    \n",
     "    if file_type == 'fastq':\n",
-    "        lane_id, read_id = get_fastq_source(file_path)\n",
+    "        lane_id, read_id, sample_num = get_fastq_source(file_path)\n",
     "    \n",
     "    file_path = re.sub('.*(?=/genomics)', '', file_path)\n",
     "    \n",
-    "    return {'path': file_path, 'lane_id': lane_id, 'read_id': read_id}\n",
+    "    return {'path': file_path, 'lane_id': lane_id, \n",
+    "            'read_id': read_id, 'sample_number': sample_num}\n",
     "\n",
     "\n",
     "# describe raw files for current lib\n",
@@ -142,20 +142,21 @@
     "    with open(lib_list_file) as f:\n",
     "        for i, l in enumerate(f):\n",
     "            if i > 0:\n",
-    "                lib_id, lib_packet, fc_id, fc_packet = parse_lib_line(l)\n",
-    "                lib_packet['run_id'] = fc_id\n",
+    "                lib_id, lib_packet, fc_run_id, fc_packet = parse_lib_line(l)\n",
+    "                lib_packet['run_id'] = fc_run_id\n",
+    "                lib_packet['run_tag'] = fc_packet.get('flowcell_id')\n",
     "                        \n",
     "                lib_dict.setdefault(lib_id, []).append(lib_packet)\n",
     "\n",
-    "                if fc_id not in fc_dict:\n",
-    "                    fc_dict[fc_id] = fc_packet\n",
+    "                if fc_run_id not in fc_dict:\n",
+    "                    fc_dict[fc_run_id] = fc_packet\n",
     "                    \n",
     "    return fc_dict, lib_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -194,18 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "!grep 160122 ../data/lib_list_master.txt > ../data/lib_list_160122.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -218,12 +208,13 @@
        " 'procedureId': None,\n",
        " 'rawData': [{'laneId': 'L003',\n",
        "   'path': '/genomics/Illumina/160122_D00565_0101_BC81LMANXX/Unaligned/P54-18-28092065/lib10320-32561562/1-930954-44-C03_S68_L003_R1_001.fastq.gz',\n",
-       "   'readId': 'R1'}],\n",
-       " 'runId': 'C81LMANXX',\n",
-       " 'type': None}"
+       "   'readId': 'R1',\n",
+       "   'sampleNumber': 68}],\n",
+       " 'runId': '160122_D00565_0101_BC81LMANXX',\n",
+       " 'type': 'sequenced library'}"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +256,7 @@
     "    '''\n",
     "    \n",
     "    def __init__(self, *args, **kwargs):\n",
-    "        if 'procedure_id' in kwargs:\n",
+    "        if 'protocol_id' in kwargs:\n",
     "            self.procedure_id = kwargs.pop('procedure_id')\n",
     "        else:\n",
     "            self.procedure_id = None\n",
@@ -283,11 +274,14 @@
     "        else:\n",
     "            self.parent_id = None\n",
     "        Sample.__init__(self, *args, **kwargs)\n",
+    "        \n",
+    "        # overwrite sample type\n",
+    "        self.type = 'sequenced library'\n",
     "    \n",
-    "    def _init_from_library(self, lib_id, lib_packet):\n",
+    "    def _init_from_lib_packet(self, lib_id, lib_packet):\n",
     "        self.parent_id = lib_id\n",
     "        self.run_id = lib_packet.get('run_id')\n",
-    "        self._id = lib_id + '_' + lib_packet.get('run_id')\n",
+    "        self._id = '%s_%s' % (lib_id, lib_packet.get('run_tag'))\n",
     "        \n",
     "        self._get_raw_data(lib_packet)\n",
     "        \n",
@@ -301,33 +295,8 @@
     "#             seq_lib_id = lib + '_' + run.get('run_id')\n",
     "#             print seq_lib_id\n",
     "o = SequencedLibrarySample()\n",
-    "o._init_from_library(lib_id, lib_packet)\n",
+    "o._init_from_lib_packet(lib_id, lib_packet)\n",
     "o.to_db()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'fastq_dir': '/mnt/genomics/Illumina/160122_D00565_0101_BC81LMANXX/Unaligned/P54-18-28092065/lib10320-32561562',\n",
-       " 'project_id': 54,\n",
-       " 'run_id': 'C81LMANXX',\n",
-       " 'subproject_id': 18}"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lib_packet"
    ]
   },
   {
@@ -338,53 +307,12 @@
    },
    "outputs": [],
    "source": [
-    "lib_list_file = \"../data/lib_list_160122.txt\"\n",
-    "with open(lib_list_file) as f:\n",
-    "    ll = f.readlines()"
+    "!grep 160122 ../data/lib_list_master.txt > ../data/lib_list_160122.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'lane_id': 'L001',\n",
-       "  'path': '/genomics/Illumina/160122_D00565_0101_BC81LMANXX/Unaligned/P54-17-28096068/lib10397-32552614/927495-25_S5_L001_R1_001.fastq.gz',\n",
-       "  'read_id': 'R1'},\n",
-       " {'lane_id': 'L002',\n",
-       "  'path': '/genomics/Illumina/160122_D00565_0101_BC81LMANXX/Unaligned/P54-17-28096068/lib10397-32552614/927495-25_S5_L002_R1_001.fastq.gz',\n",
-       "  'read_id': 'R1'}]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lib_id, lib_packet, fc_id, fc_packet = parse_lib_line(ll[0])\n",
-    "get_lib_fastqs(lib_packet.get('fastq_dir'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fc_dict, lib_dict = read_lib_list(lib_list_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -394,16 +322,19 @@
       "text/plain": [
        "{'fastq_dir': '/mnt/genomics/Illumina/160122_D00565_0101_BC81LMANXX/Unaligned/P54-18-28092065/lib10320-32561562',\n",
        " 'project_id': 54,\n",
-       " 'run_id': 'C81LMANXX',\n",
+       " 'run_id': '160122_D00565_0101_BC81LMANXX',\n",
+       " 'run_tag': 'C81LMANXX',\n",
        " 'subproject_id': 18}"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "lib_list_file = \"../data/lib_list_160122.txt\"\n",
+    "fc_dict, lib_dict = read_lib_list(lib_list_file)\n",
     "lib_id = 'lib10320'\n",
     "lib_packet = lib_dict[lib_id][0]\n",
     "lib_packet"
@@ -411,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -419,16 +350,160 @@
     {
      "data": {
       "text/plain": [
-       "[7]"
+       "{'date': '2016-01-22',\n",
+       " 'flowcell_dir': '/mnt/genomics/Illumina',\n",
+       " 'flowcell_id': 'C81LMANXX',\n",
+       " 'flowcell_pos': 'B',\n",
+       " 'instrument': 'D00565',\n",
+       " 'run_number': 101}"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[ f.get('lane_id') for f in raw_files ]"
+    "fc_dict\n",
+    "fc_id = '160122_D00565_0101_BC81LMANXX'\n",
+    "fc_packet = fc_dict[fc_id]\n",
+    "fc_packet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/genomics/Illumina\n",
+      "/Volumes/genomics/Illumina/160122_D00565_0101_BC81LMANXX/runParameters.xml\n",
+      "{'EnableCameraLogging': 'false', 'Index': 'HiSeq v4 Dual Index', 'TemplateCycleCount': '5', 'AlignToPhiX': '', 'RunStartDate': '160122', 'UseExistingRecipe': 'false', 'TileWidth': '2048', 'SelectedSections': '', 'EnableLft': 'true', 'RecipeFragmentVersion': '1.5.21.0', 'Flowcell': 'HiSeq Flow Cell v4', 'EnableBasecalling': 'true', 'SlideHolder': 'HiSeq Flow Cell Holder', 'CPLDVersion': '3.0.0', 'NumSwaths': '3', 'WashBarcode': 'C81A1ANXX', 'SelectedSurface': 'BothLaneSurfaces', 'PeriodicSave': 'Save All Thumbnails', 'Sbs': 'HiSeq SBS Kit v4', 'ScanID': '-999', 'NumTilesPerSwath': '16', 'ReagentKits': '', 'ScanNumber': '101', 'RunMode': 'RapidHighOutput', 'ReagentBottles': '', 'Barcode': 'C81LMANXX', 'Read1': '58', 'KeepIntensityFiles': 'false', 'Read2': '0', 'SampleSheet': 'Z:\\\\Illumina HiSeq2500\\\\BaseSpace Sample Sheets\\\\2016Jan21_BC81LMANXX_V4HO_P54-17-18-19_P82-4_P66-3_P127-1_P117-4_P116-2_BS_SampleSheet.csv', 'RunID': '160122_D00565_0101_BC81LMANXX', 'ImageWidth': '2048', 'RapidRunChemistry': 'None', 'EnableNotifications': 'false', 'IntegrationMode': 'BaseSpace', 'CameraFirmware': '2.01-F20-R02', 'EnableAnalysis': 'true', 'ApplicationName': 'HiSeq Control Software', 'Username': 'sbsuser', 'ComputerName': 'HWI-D00565', 'ApplicationVersion': '2.2.58', 'BaseSpaceSettings': '', 'MockRun': 'false', 'CameraDriver': '6.45.20.3690', 'FirstBaseConfirmation': 'false', 'ResumeCycle': '0', 'AreaPerPixelmm2': '1.40625E-07', 'ScannerID': 'D00565', 'FPGAVersion': '7.9.7', 'RemapQScores': 'v8bins', 'FCPosition': 'B', 'ClusteringChoice': 'None', 'RTAVersion': '1.18.64', 'ExperimentName': 'P54-17-18-19_P82-4_P66-3_P127-1_P117-4_P116-2', 'FPGADynamicFocusSettings': '', 'PromptForPeReagents': 'false', 'SupportMultipleSurfacesInUI': 'true', 'WorkFlowType': 'DUALINDEX', 'NumAnalysisThreads': '8', 'EnableAutoCenter': 'true', 'IndexRead2': '8', 'Resume': 'false', 'IndexRead1': '8', 'PerformPreRunFluidicsCheck': 'false', 'AutoTiltOnce': 'true', 'TempFolder': 'E:\\\\Illumina\\\\HiSeqTemp\\\\160122_D00565_0101_BC81LMANXX', 'LaneLength': '60', 'Reads': '', 'SwathScanMode': 'AutoSwath', 'AdapterPlate': 'HiSeq Adapter Plate', 'ServiceRun': 'false', 'PairEndFC': 'false', 'FocusMethod': 'DynamicITF', 'Rehyb': 'None', 'CompressBcls': 'true', 'OutputFolder': 'Y:\\\\Illumina', 'TileHeight': '10000', 'ChemistryVersion': 'Illumina,Bruno Fluidics Controller,0,v2.0340', 'ImageHeight': '160000'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': '160122_D00565_0101_BC81LMANXX',\n",
+       " 'parent_id': None,\n",
+       " 'procedure_id': None,\n",
+       " 'raw_data': [{'lane_id': 'L003',\n",
+       "   'path': '/genomics/Illumina/160122_D00565_0101_BC81LMANXX/Unaligned/P54-18-28092065/lib10320-32561562/1-930954-44-C03_S68_L003_R1_001.fastq.gz',\n",
+       "   'read_id': 'R1',\n",
+       "   'sample_number': 68}],\n",
+       " 'type': 'flowcell'}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import xml.etree.ElementTree as et\n",
+    "import glob\n",
+    "\n",
+    "def find_dir(top_dir, dir_name, max_depth):\n",
+    "    for d in range(1, max_depth + 1):\n",
+    "        max_glob = \"/\".join(\"*\" * d)\n",
+    "        top_glob = os.path.join(top_dir, max_glob)\n",
+    "        for f in glob.glob(top_glob):\n",
+    "            if dir_name in f:\n",
+    "                return f\n",
+    "                break\n",
+    "                \n",
+    "def read_fc_run_params(run_params_file):\n",
+    "    tree = et.parse(run_params_file)\n",
+    "    return {param.tag: param.text.rstrip() for param in tree.getroot()[0]\n",
+    "            if param.text is not None}\n",
+    "\n",
+    "def get_fc_protocol(param_dict):\n",
+    "    fc_version = matchdefault('v[0-9]+', param_dict.get('Flowcell'))\n",
+    "    print fc_version\n",
+    "\n",
+    "    \n",
+    "class Run(TG3Object):\n",
+    "    '''\n",
+    "    GenLIMS object in the 'runs' collection\n",
+    "    '''\n",
+    "    \n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        if 'protocol_id' in kwargs:\n",
+    "            self.procedure_id = kwargs.pop('procedure_id')\n",
+    "        else:\n",
+    "            self.procedure_id = None\n",
+    "        TG3Object.__init__(self, *args, **kwargs)\n",
+    "        \n",
+    "        \n",
+    "class FlowcellRun(Run):\n",
+    "    '''\n",
+    "    GenLIMS object in 'runs' collection of type 'flowcell'\n",
+    "    '''\n",
+    "    \n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        if 'parent_id' in kwargs:\n",
+    "            self.parent_id = kwargs.pop('parent_id')\n",
+    "        else:\n",
+    "            self.parent_id = None\n",
+    "        Run.__init__(self, *args, **kwargs)\n",
+    "        \n",
+    "        # overwrite sample type\n",
+    "        self.type = 'flowcell'\n",
+    "    \n",
+    "    def _init_from_fc_packet(self, fc_run_id, fc_packet):\n",
+    "        self._id = fc_run_id\n",
+    "        \n",
+    "        fc_dir = fc_packet.pop('flowcell_dir')\n",
+    "        for k, v in fc_packet.items():\n",
+    "            self.update({k: v})\n",
+    "        \n",
+    "        self._get_fc_params(fc_dir)\n",
+    "        \n",
+    "    def _get_fc_params(self, fc_dir):\n",
+    "        root_dir = find_dir('/', 'genomics', 3)\n",
+    "        local_fc_dir = re.sub('.*genomics', root_dir, fc_dir)\n",
+    "        print fc_dir\n",
+    "        run_params_file = os.path.join(local_fc_dir, self._id, 'runParameters.xml')\n",
+    "        print run_params_file\n",
+    "        \n",
+    "        print(read_fc_run_params(run_params_file))\n",
+    "        \n",
+    "        self.raw_data = get_lib_fastqs(lib_packet.get('fastq_dir'))\n",
+    "# param_dict = read_run_params(runparams_file)\n",
+    "# get_fc_protocol(param_dict)\n",
+    "\n",
+    "r = FlowcellRun()\n",
+    "r._init_from_fc_packet(fc_id, fc_packet)\n",
+    "r.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Volumes/genomics/Illumina'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_dir = find_dir('/', 'genomics', 3)\n",
+    "fc_dir = '/mnt/genomics/Illumina'\n",
+    "re.sub('.*genomics', root_dir, fc_dir)"
    ]
   },
   {
