fixing some typos in ncbi dl code

--- a/nbs/nbci_download_dev.ipynb
+++ b/nbs/nbci_download_dev.ipynb
@@ -226,6 +226,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GSM1843364'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = 'ftp://ftp.ncbi.nlm.nih.gov/pub/geo/DATA/supplementary/samples/GSM1843nnn/GSM1843364/GSM1843364_11952.gc_norm_rpkm.txt.gz'\n",
+    "strings.matchdefault('GSM[0-9]+(?=[^GSM]*$)', f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
