updating code for postprocessing of globus outputs

--- a/nbs/globus_results_compile.ipynb
+++ b/nbs/globus_results_compile.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -15,65 +27,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "class WorkflowParser(object):\n",
-    "    \n",
-    "    def __init__(self, batch_file=None):\n",
-    "        \n",
-    "        self.bf = batch_file\n",
-    "        self.read_batch_file()\n",
-    "        \n",
-    "    def read_batch_file(self):\n",
-    "        \n",
-    "        batch_file = self.bf\n",
-    "        with open(batch_file) as f:\n",
-    "            batch_lines = f.readlines()\n",
-    "            \n",
-    "        self.batch = batch_lines\n",
-    "    \n",
-    "    def get_params(self):\n",
-    "        \n",
-    "        param_line = [l for l in self.batch if 'SampleName' in l][0]\n",
-    "        param_dict = {idx: re.sub('##.*', '', p) \\\n",
-    "                      for idx,p in enumerate(param_line.strip().split('\\t'))}\n",
-    "        \n",
-    "        self.pd = param_dict\n",
-    "        \n",
-    "    def get_lib_params(self):\n",
-    "        \n",
-    "        if not hasattr(self, 'pd'):\n",
-    "            self.get_params()\n",
-    "        \n",
-    "        param_dict = self.pd\n",
-    "        lib_param_dict = [{param_dict[i]: p \\\n",
-    "                           for i,p in enumerate(l.strip().split('\\t'))} \\\n",
-    "                          for l in self.batch if re.search('lib[0-9]+', l)]\n",
-    "        \n",
-    "        self.lpd = lib_param_dict\n",
-    "        \n",
-    "    def build_out_dict(self):\n",
-    "        \n",
-    "        if not hasattr(self, 'lpd'):\n",
-    "            self.get_lib_params()\n",
-    "        \n",
-    "        lib_param_dict = self.lpd\n",
-    "        out_file_dict = {pd['SampleName']: {re.sub('_out', '', k): pd[k] \\\n",
-    "                                            for k in pd if 'out' in k} \\\n",
-    "                         for pd in lib_param_dict}\n",
-    "        \n",
-    "        self.ofd = out_file_dict\n",
-    "        \n",
-    "    def show_output_files(self):\n",
-    "        \n",
-    "        if not hasattr(self, 'ofd'):\n",
-    "            self.build_out_dict()\n",
-    "        \n",
-    "        return self.ofd"
+    "import _mypath\n",
+    "from bripipetools.globusgalaxy import postprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "batch_file = '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/globus_batch_submission/160412_P43-12_C6VG0ANXX_optimized_nextera_sr_grch38_v0.1_complete.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pb = postprocess.ProcessedBatch(batch_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Workflow: optimized_nextera_sr_grch38_v0.1_complete\n",
+      ">> Compiling ouputs for lib6839_C6VG0ANXX [43-12] (1 of 1)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pb.curate_outputs()"
    ]
   },
   {
