using nb for testing while updating globus module code

--- a/nbs/globus_results_compile.ipynb
+++ b/nbs/globus_results_compile.ipynb
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import _mypath\n",
-    "from bripipetools.globusgalaxy import postprocess"
+    "from bripipetools.globusgalaxy import curation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -50,18 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pb = postprocess.ProcessedBatch(batch_file)"
+    "pb = curation.BatchCurator(batch_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -72,14 +72,134 @@
      "text": [
       "\n",
       "Workflow: optimized_nextera_sr_grch38_v0.1_complete\n",
-      ">> Compiling ouputs for lib6839_C6VG0ANXX [43-12] (1 of 1)\n",
+      ">> Compiling ouputs for lib6839_C6VG0ANXX [P43-12] (1 of 1)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "pb.curate_outputs()"
+    "out_map = pb.curate_outputs()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lib6839_C6VG0ANXX': [{'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_align_metrics.html',\n",
+       "   'size': 5593,\n",
+       "   'status': True,\n",
+       "   'type': 'picard_align_metrics_html'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_markdups_metrics.html',\n",
+       "   'size': 4048,\n",
+       "   'status': True,\n",
+       "   'type': 'picard_markdups_metrics_html'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/QC/lib6839_C6VG0ANXX_fastqc_qc.txt',\n",
+       "   'size': 165598,\n",
+       "   'status': True,\n",
+       "   'type': 'fastqc_qc_txt'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/inputFastqs/lib6839_C6VG0ANXX_R1-final.fastq.gz',\n",
+       "   'size': 6045231,\n",
+       "   'status': True,\n",
+       "   'type': 'fastq'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_tophat_stats_metrics.txt',\n",
+       "   'size': 167,\n",
+       "   'status': True,\n",
+       "   'type': 'tophat_stats_metrics_txt'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_rnaseq_metrics.html',\n",
+       "   'size': 11209,\n",
+       "   'status': True,\n",
+       "   'type': 'picard_rnaseq_metrics_html'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/QC/lib6839_C6VG0ANXX_fastqc_qc.html',\n",
+       "   'size': 348899,\n",
+       "   'status': True,\n",
+       "   'type': 'fastqc_qc_html'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/trimmed/lib6839_C6VG0ANXX_trimmed.fastq',\n",
+       "   'size': 22621084,\n",
+       "   'status': True,\n",
+       "   'type': 'trimmed_fastq'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/counts/lib6839_C6VG0ANXX_htseq_counts.txt',\n",
+       "   'size': 1157815,\n",
+       "   'status': True,\n",
+       "   'type': 'htseq_counts_txt'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/alignments/lib6839_C6VG0ANXX_tophat_alignments.bam',\n",
+       "   'size': 5805000,\n",
+       "   'status': True,\n",
+       "   'type': 'tophat_alignments_bam'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/log/lib6839_C6VG0ANXX_workflow_log.txt',\n",
+       "   'size': 15523,\n",
+       "   'status': True,\n",
+       "   'type': 'workflow_log_txt'},\n",
+       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_htseq_metrics.txt',\n",
+       "   'size': 99,\n",
+       "   'status': True,\n",
+       "   'type': 'htseq_metrics_txt'}]}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pb.check_outputs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/*\n",
+      "/*/*\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/Volumes'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bripipetools.util import files\n",
+    "files.locate_root_folder('genomics')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/dev/null'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
