--- a/nbs/globus_results_compile.ipynb
+++ b/nbs/globus_results_compile.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -39,115 +39,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "batch_file = '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/globus_batch_submission/160412_P43-12_C6VG0ANXX_optimized_nextera_sr_grch38_v0.1_complete.txt'"
+    "batch_file = '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/globus_batch_submission/160412_P43-12_C6VG0ANXX_optimized_nextera_sr_grch38_v0.1_complete.txt'\n",
+    "batch_file2 = '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/globus_batch_submission/160216_P43-12_C6VG0ANXX_optimized_nextera_sr_grch38_v0.1_complete.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pb = curation.BatchCurator(batch_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Workflow: optimized_nextera_sr_grch38_v0.1_complete\n",
-      ">> Compiling ouputs for lib6839_C6VG0ANXX [P43-12] (1 of 1)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "out_map = pb.curate_outputs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'lib6839_C6VG0ANXX': [{'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_align_metrics.html',\n",
-       "   'size': 5593,\n",
-       "   'status': True,\n",
-       "   'type': 'picard_align_metrics_html'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_markdups_metrics.html',\n",
-       "   'size': 4048,\n",
-       "   'status': True,\n",
-       "   'type': 'picard_markdups_metrics_html'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/QC/lib6839_C6VG0ANXX_fastqc_qc.txt',\n",
-       "   'size': 165598,\n",
-       "   'status': True,\n",
-       "   'type': 'fastqc_qc_txt'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/inputFastqs/lib6839_C6VG0ANXX_R1-final.fastq.gz',\n",
-       "   'size': 6045231,\n",
-       "   'status': True,\n",
-       "   'type': 'fastq'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_tophat_stats_metrics.txt',\n",
-       "   'size': 167,\n",
-       "   'status': True,\n",
-       "   'type': 'tophat_stats_metrics_txt'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_rnaseq_metrics.html',\n",
-       "   'size': 11209,\n",
-       "   'status': True,\n",
-       "   'type': 'picard_rnaseq_metrics_html'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/QC/lib6839_C6VG0ANXX_fastqc_qc.html',\n",
-       "   'size': 348899,\n",
-       "   'status': True,\n",
-       "   'type': 'fastqc_qc_html'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/trimmed/lib6839_C6VG0ANXX_trimmed.fastq',\n",
-       "   'size': 22621084,\n",
-       "   'status': True,\n",
-       "   'type': 'trimmed_fastq'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/counts/lib6839_C6VG0ANXX_htseq_counts.txt',\n",
-       "   'size': 1157815,\n",
-       "   'status': True,\n",
-       "   'type': 'htseq_counts_txt'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/alignments/lib6839_C6VG0ANXX_tophat_alignments.bam',\n",
-       "   'size': 5805000,\n",
-       "   'status': True,\n",
-       "   'type': 'tophat_alignments_bam'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/log/lib6839_C6VG0ANXX_workflow_log.txt',\n",
-       "   'size': 15523,\n",
-       "   'status': True,\n",
-       "   'type': 'workflow_log_txt'},\n",
-       "  {'file': '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_htseq_metrics.txt',\n",
-       "   'size': 99,\n",
-       "   'status': True,\n",
-       "   'type': 'htseq_metrics_txt'}]}"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pb.check_outputs()"
+    "pb = curation.BatchCurator(batch_file2)"
    ]
   },
   {
@@ -161,45 +71,188 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/*\n",
-      "/*/*\n"
+      "\n",
+      "Workflow: optimized_nextera_sr_grch38_v0.1_complete\n",
+      ">> Compiling ouputs for lib6839_C6VG0ANXX [P43-12] (1 of 2)\n",
+      "\n",
+      "\n",
+      "Workflow: optimized_nextera_sr_grch38_v0.1_complete\n",
+      ">> Compiling ouputs for lib6830_C6VG0ANXX [P43-12] (2 of 2)\n",
+      "\n",
+      "9\n",
+      "9\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/Volumes'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from bripipetools.util import files\n",
-    "files.locate_root_folder('genomics')"
+    "out_map = pb.curate_outputs()\n",
+    "for (samples, outputs) in out_map.items():\n",
+    "    print(len(outputs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Workflow: optimized_nextera_sr_grch38_v0.1_complete\n",
+      ">> Compiling ouputs for lib6839_C6VG0ANXX [P43-12] (1 of 2)\n",
+      "\n",
+      ">> Compiling ouputs for lib6830_C6VG0ANXX [P43-12] (2 of 2)\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'/dev/null'"
+       "{'lib6830_C6VG0ANXX': {'fastq': {'fastq': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/inputFastqs/lib6830_C6VG0ANXX_R1-final.fastq.gz',\n",
+       "    'type': 'fastq'}},\n",
+       "  'fastqc': {'fastqc_qc_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6830_C6VG0ANXX_fastqc_qc.html',\n",
+       "    'type': 'qc'},\n",
+       "   'fastqc_qc_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6830_C6VG0ANXX_fastqc_qc.txt',\n",
+       "    'type': 'qc'}},\n",
+       "  'htseq': {'htseq_counts_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/counts/lib6830_C6VG0ANXX_htseq_counts.txt',\n",
+       "    'type': 'counts'},\n",
+       "   'htseq_metrics_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_htseq_metrics.txt',\n",
+       "    'type': 'metrics'}},\n",
+       "  'picard_align': {'picard_align_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_align_metrics.html',\n",
+       "    'type': 'metrics'}},\n",
+       "  'picard_markdups': {'picard_markdups_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_markdups_metrics.html',\n",
+       "    'type': 'metrics'}},\n",
+       "  'picard_rnaseq': {'picard_rnaseq_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_rnaseq_metrics.html',\n",
+       "    'type': 'metrics'}},\n",
+       "  'tophat': {'tophat_alignments_bam': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/alignments/lib6830_C6VG0ANXX_tophat_alignments.bam',\n",
+       "    'type': 'alignments'},\n",
+       "   'tophat_stats_metrics_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_tophat_stats_metrics.txt',\n",
+       "    'type': 'metrics'}},\n",
+       "  'trimmed_fastq': {'trimmed_fastq': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/trimmed/lib6830_C6VG0ANXX_trimmed.fastq',\n",
+       "    'type': 'trimmed'}},\n",
+       "  'workflow_log': {'workflow_log_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/log/lib6830_C6VG0ANXX_workflow_log.txt',\n",
+       "    'type': 'log'}}},\n",
+       " 'lib6839_C6VG0ANXX': {'fastq': {'fastq': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/inputFastqs/lib6839_C6VG0ANXX_R1-final.fastq.gz',\n",
+       "    'type': 'fastq'}},\n",
+       "  'fastqc': {'fastqc_qc_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX_fastqc_qc.html',\n",
+       "    'type': 'qc'},\n",
+       "   'fastqc_qc_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX_fastqc_qc.txt',\n",
+       "    'type': 'qc'}},\n",
+       "  'htseq': {'htseq_counts_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/counts/lib6839_C6VG0ANXX_htseq_counts.txt',\n",
+       "    'type': 'counts'},\n",
+       "   'htseq_metrics_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_htseq_metrics.txt',\n",
+       "    'type': 'metrics'}},\n",
+       "  'picard_align': {'picard_align_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_align_metrics.html',\n",
+       "    'type': 'metrics'}},\n",
+       "  'picard_markdups': {'picard_markdups_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_markdups_metrics.html',\n",
+       "    'type': 'metrics'}},\n",
+       "  'picard_rnaseq': {'picard_rnaseq_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_rnaseq_metrics.html',\n",
+       "    'type': 'metrics'}},\n",
+       "  'tophat': {'tophat_alignments_bam': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/alignments/lib6839_C6VG0ANXX_tophat_alignments.bam',\n",
+       "    'type': 'alignments'},\n",
+       "   'tophat_stats_metrics_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_tophat_stats_metrics.txt',\n",
+       "    'type': 'metrics'}},\n",
+       "  'trimmed_fastq': {'trimmed_fastq': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/trimmed/lib6839_C6VG0ANXX_trimmed.fastq',\n",
+       "    'type': 'trimmed'}},\n",
+       "  'workflow_log': {'workflow_log_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/log/lib6839_C6VG0ANXX_workflow_log.txt',\n",
+       "    'type': 'log'}}}}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "out_info = pb.curate_outputs()\n",
+    "out_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from bripipetools.globusgalaxy import fileops\n",
+    "(sample, packet) = out_info.items()[0]\n",
+    "fpm = fileops.FilePacketManager(packet, sample, '.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fastqc\n",
+      "fastq\n",
+      "trimmed_fastq\n",
+      "picard_markdups\n",
+      "picard_align\n",
+      "htseq\n",
+      "workflow_log\n",
+      "picard_rnaseq\n",
+      "tophat\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'fastq': {'fastq': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/inputFastqs/lib6839_C6VG0ANXX_R1-final.fastq.gz',\n",
+       "   'type': 'fastq'},\n",
+       "  'subdir': ''},\n",
+       " 'fastqc': {'fastqc_qc_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX_fastqc_qc.html',\n",
+       "   'type': 'qc'},\n",
+       "  'fastqc_qc_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX_fastqc_qc.txt',\n",
+       "   'type': 'qc'},\n",
+       "  'subdir': 'lib6839_C6VG0ANXX/qcR1'},\n",
+       " 'htseq': {'htseq_counts_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/counts/lib6839_C6VG0ANXX_htseq_counts.txt',\n",
+       "   'type': 'counts'},\n",
+       "  'htseq_metrics_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_htseq_metrics.txt',\n",
+       "   'type': 'metrics'},\n",
+       "  'subdir': ''},\n",
+       " 'picard_align': {'picard_align_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_align_metrics.html',\n",
+       "   'type': 'metrics'},\n",
+       "  'subdir': 'lib6839_C6VG0ANXX_qc'},\n",
+       " 'picard_markdups': {'picard_markdups_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_markdups_metrics.html',\n",
+       "   'type': 'metrics'},\n",
+       "  'subdir': 'lib6839_C6VG0ANXXMarkDups'},\n",
+       " 'picard_rnaseq': {'picard_rnaseq_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_rnaseq_metrics.html',\n",
+       "   'type': 'metrics'},\n",
+       "  'subdir': 'lib6839_C6VG0ANXX_al'},\n",
+       " 'tophat': {'subdir': '',\n",
+       "  'tophat_alignments_bam': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/alignments/lib6839_C6VG0ANXX_tophat_alignments.bam',\n",
+       "   'type': 'alignments'},\n",
+       "  'tophat_stats_metrics_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_tophat_stats_metrics.txt',\n",
+       "   'type': 'metrics'}},\n",
+       " 'trimmed_fastq': {'subdir': '',\n",
+       "  'trimmed_fastq': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/trimmed/lib6839_C6VG0ANXX_trimmed.fastq',\n",
+       "   'type': 'trimmed'}},\n",
+       " 'workflow_log': {'subdir': '',\n",
+       "  'workflow_log_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/log/lib6839_C6VG0ANXX_workflow_log.txt',\n",
+       "   'type': 'log'}}}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fpm._prep_target_subdir()"
+   ]
   },
   {
    "cell_type": "code",
