more reoganization of globus fileops module

--- a/nbs/globus_results_compile.ipynb
+++ b/nbs/globus_results_compile.ipynb
@@ -174,20 +174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from bripipetools.globusgalaxy import fileops\n",
-    "(sample, packet) = out_info.items()[0]\n",
+    "(sample, packet) = out_info.items()[1]\n",
     "fpm = fileops.FilePacketManager(packet, sample, '.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -196,62 +196,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fastqc\n",
-      "fastq\n",
-      "trimmed_fastq\n",
-      "picard_markdups\n",
-      "picard_align\n",
-      "htseq\n",
-      "workflow_log\n",
-      "picard_rnaseq\n",
-      "tophat\n"
+      " > Result source: fastqc\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6830_C6VG0ANXX_fastqc_qc.txt', './QC/lib6830_C6VG0ANXX/qcR1/fastqc_data.txt')\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6830_C6VG0ANXX_fastqc_qc.html', './QC/lib6830_C6VG0ANXX/qcR1/fastqc_report.html')\n",
+      " > Result source: fastq\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/inputFastqs/lib6830_C6VG0ANXX_R1-final.fastq.gz', './')\n",
+      " > Result source: trimmed_fastq\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/trimmed/lib6830_C6VG0ANXX_trimmed.fastq', './TrimmedFastqs/lib6830_C6VG0ANXX_trimmed.fastq')\n",
+      " > Result source: picard_markdups\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_markdups_metrics.html', './metrics/lib6830_C6VG0ANXXMarkDups/MarkDups_Dupes_Marked_html.html')\n",
+      " > Result source: picard_align\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_align_metrics.html', './metrics/lib6830_C6VG0ANXX_qc/Picard_Alignment_Summary_Metrics_html.html')\n",
+      " > Result source: htseq\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_htseq_metrics.txt', './metrics/lib6830_C6VG0ANXXmm.txt')\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/counts/lib6830_C6VG0ANXX_htseq_counts.txt', './counts/lib6830_C6VG0ANXX_count.txt')\n",
+      " > Result source: workflow_log\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/log/lib6830_C6VG0ANXX_workflow_log.txt', './logs/lib6830_C6VG0ANXX_workflow_log.txt')\n",
+      " > Result source: picard_rnaseq\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_rnaseq_metrics.html', './metrics/lib6830_C6VG0ANXX_al/RNA_Seq_Metrics_html.html')\n",
+      " > Result source: tophat\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/alignments/lib6830_C6VG0ANXX_tophat_alignments.bam', './alignments/lib6830_C6VG0ANXX.bam')\n",
+      "('/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_tophat_stats_metrics.txt', './metrics/lib6830_C6VG0ANXXths.txt')\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'fastq': {'fastq': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/inputFastqs/lib6839_C6VG0ANXX_R1-final.fastq.gz',\n",
-       "   'type': 'fastq'},\n",
-       "  'subdir': ''},\n",
-       " 'fastqc': {'fastqc_qc_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX_fastqc_qc.html',\n",
-       "   'type': 'qc'},\n",
-       "  'fastqc_qc_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX_fastqc_qc.txt',\n",
-       "   'type': 'qc'},\n",
-       "  'subdir': 'lib6839_C6VG0ANXX/qcR1'},\n",
-       " 'htseq': {'htseq_counts_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/counts/lib6839_C6VG0ANXX_htseq_counts.txt',\n",
-       "   'type': 'counts'},\n",
-       "  'htseq_metrics_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_htseq_metrics.txt',\n",
-       "   'type': 'metrics'},\n",
-       "  'subdir': ''},\n",
-       " 'picard_align': {'picard_align_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_align_metrics.html',\n",
-       "   'type': 'metrics'},\n",
-       "  'subdir': 'lib6839_C6VG0ANXX_qc'},\n",
-       " 'picard_markdups': {'picard_markdups_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_markdups_metrics.html',\n",
-       "   'type': 'metrics'},\n",
-       "  'subdir': 'lib6839_C6VG0ANXXMarkDups'},\n",
-       " 'picard_rnaseq': {'picard_rnaseq_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_rnaseq_metrics.html',\n",
-       "   'type': 'metrics'},\n",
-       "  'subdir': 'lib6839_C6VG0ANXX_al'},\n",
-       " 'tophat': {'subdir': '',\n",
-       "  'tophat_alignments_bam': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/alignments/lib6839_C6VG0ANXX_tophat_alignments.bam',\n",
-       "   'type': 'alignments'},\n",
-       "  'tophat_stats_metrics_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_tophat_stats_metrics.txt',\n",
-       "   'type': 'metrics'}},\n",
-       " 'trimmed_fastq': {'subdir': '',\n",
-       "  'trimmed_fastq': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/trimmed/lib6839_C6VG0ANXX_trimmed.fastq',\n",
-       "   'type': 'trimmed'}},\n",
-       " 'workflow_log': {'subdir': '',\n",
-       "  'workflow_log_txt': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/log/lib6839_C6VG0ANXX_workflow_log.txt',\n",
-       "   'type': 'log'}}}"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fpm._prep_target_subdir()"
+    "fpm.munge_files()"
    ]
   },
   {
